
2005-03-07 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/relation.lib.php: db comments broken

2005-03-07 Michal Čihař  <michal@cihar.com>
    * db_printview.php, tbl_printview.php, css/phpmyadmin.css.php,
      libraries/header_meta_style.inc.php: Actually use print style in themes,
      also fixes RFE #1120880.
    * sql.php: Better calculate inserted row id (bug #1156963).

2005-03-06 Michael Keck  <mkkeck@users.sourceforge.net>
    * themes/*/img/bd_deltbl.png, themes/*/bd_drop.png: Added disabled
      versions of drop icons.

2005-03-06 Michal Čihař  <michal@cihar.com>
    * export.php, libraries/display_export.lib.php, config.inc.php,
      libraries/config_import.lib.php, libraries/export/htmlexcel.php,
      libraries/export/htmlword.php, lang/*: Added Microsoft Word and Excel
      2000 export (RFE #1155122).
    * lang/czech: Updated, thanks to Michal Marek (twofish) for "storage
      engine" translation.
    * lang/english: Nothing to translate here.
    * Documentation.html: Document new Excel export.
    * config.inc.php, libraries/config_import.lib.php,
      libraries/display_export.lib.php, libraries/export/htmlword.php: Word
      export now can contain table structure and better handles more
      tables/databases export.
    * db_operations.php, export.php, main.php, tbl_move_copy.php,
      libraries/common.lib.php, libraries/select_theme.lib.php,
      libraries/auth/cookie.auth.lib.php: Unified cookie path handling, added
      / to end of path (bug #1155373).

2005-03-06 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/relation.lib.php, /display_export.lib.php,
      /export/sql.php: native comments. For MySQL 4.1.x+ I do not display
      the "Add into comments ... Comments" choice, since they are
      part of the structure

2005-03-06 Alexander M. Turek  <me@derrabus.de>
    * lang/*.inc.php, libraries/engines/innodb.lib.php: InnoDB buffer pool
      activity statistics.